<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/user">
        <menu>
            <item
                android:id="@+id/dashboard"
                android:title="@string/home"
                android:icon="@drawable/home"/>
            <item
                android:id="@+id/account_signUp"
                android:title="@string/account_sign_up"
                android:icon="@drawable/sign_up"/>
            <item
                android:id="@+id/account_login"
                android:title="@string/account_log_in"
                android:icon="@drawable/login"/>
            <item
                android:id="@+id/account_admin"
                android:title="@string/admin"
                android:icon="@drawable/admin"
                android:visible="false"/>
        </menu>
    </item>

    <item android:title="@string/product">
        <menu>
            <item
                android:id="@+id/all_products"
                android:title="@string/all_products"
                android:icon="@drawable/product"/>


            <item
                android:id="@+id/cart"
                android:title="@string/cart"
                android:icon="@drawable/cart"/>
        </menu>
    </item>

    <item android:title="@string/info_about_us">
        <menu>
            <item
                android:id="@+id/about_us"
                android:title="@string/info_about_us"
                android:icon="@drawable/info"/>
            <item
                android:id="@+id/locate_us"
                android:title="@string/info_locate_us"
                android:icon="@drawable/locate_us"/>
        </menu>
    </item>

</menu>